--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ sanic = "^23.3.0"
 small-asc = {git = "https://github.com/rism-digital/small-asc.git", rev = "main"}
 ypres = {git = "https://github.com/rism-digital/ypres.git", rev = "main"}
 orjson = "^3.8.11"
+pyyaml = "^6.0"
 
 
 [tool.poetry.group.dev.dependencies]
