--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "muscatplus-reconciliation"
 version = "0.1.0"
 description = ""
-authors = ["Andrew Hankinson <andrew.hankinson@gmail.com>"]
+authors = ["Andrew Hankinson <andrew.hankinson@rism.digital>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
